--- a/AwesomeSocialMedia.Users/AwesomeSocialMedia.Users.Infrastructure/AwesomeSocialMedia.Users.Infrastructure.csproj
+++ b/AwesomeSocialMedia.Users/AwesomeSocialMedia.Users.Infrastructure/AwesomeSocialMedia.Users.Infrastructure.csproj
@@ -7,8 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AwesomeSocialMedia.Users.Core\AwesomeSocialMedia.Users.Core.csproj" />
   </ItemGroup>
 
 </Project>
